--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'error')}">
+<html>
 
   <body>
-    <p th:text="${message}">Exception message</p>
+    <p>Erro</p>
   </body>
 
 </html>
