--- a/src/main/resources/templates/execute.html
+++ b/src/main/resources/templates/execute.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>TASIMA - Trabalho de deploy</title>
-	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-	</head>
-	<body>
-		<div class="container" >
-			<div class="jumbotron" align="center" style="margin-top: 50px;">
-				<h1>TASIMA - Metódos Ágeis - Trabalho de deploy - Execute</h1>
-				<div align="center">
-					<a href="index" class="btn btn-lg btn-primary">Voltar!</a>
-				</div>
-			</div>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>TASIMA - Trabalho de deploy</title>
+<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+<body>
+	<div class="container">
+		<div class="jumbotron" align="center" style="margin-top: 5px;">
+			<h1>TASIMA</h1>
+			<h2>Metódos Ágeis</h2>
 		</div>
-	    
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	    <script src="bootstrap/js/bootstrap.min.js"></script>
-	
-	</body>
+	</div>
+	<div align="center">
+		<a href="" class="btn btn-lg btn-primary">Voltar!</a>
+	</div>
+
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="bootstrap/js/bootstrap.min.js"></script>
+
+</body>
 </html>
