--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,15 +7,16 @@
 	</head>
 	<body>
 		<div class="container" >
-			<div class="jumbotron" align="center" style="margin-top: 50px;">
-				<h1>TASIMA - Metódos Ágeis - Trabalho de deploy</h1>
-				<div align="center">
-					<a href="execute" class="btn btn-lg btn-primary">Execute algo!</a>
-				</div>
-			</div>
+		<div class="jumbotron" align="center" style="margin-top: 5px;">
+			<h1>TASIMA</h1>
+			<h2>Metódos Ágeis</h2>
 		</div>
-	    
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		</div>
+	<div align="center">
+		<a href="execute" class="btn btn-lg btn-primary">Execute algo!</a>
+	</div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	    <script src="bootstrap/js/bootstrap.min.js"></script>
 	
 	</body>
