--- a/src/main/resources/templates/execute.html
+++ b/src/main/resources/templates/execute.html
@@ -13,7 +13,7 @@
 		</div>
 	</div>
 	<div align="center">
-		<a href="" class="btn btn-lg btn-primary">Voltar!</a>
+		<a href="/" class="btn btn-lg btn-primary">Voltar!</a>
 	</div>
 
 	<script
