--- a/src/main/resources/templates/execute.html
+++ b/src/main/resources/templates/execute.html
@@ -8,12 +8,11 @@
 <body>
 	<div class="container">
 		<div class="jumbotron" align="center" style="margin-top: 5px;">
-			<h1>TASIMA</h1>
-			<h2>Metódos Ágeis</h2>
+			<h1>TASIMA <small>Metódos Ágeis - Deploy</small></h1>
 		</div>
-	</div>
-	<div align="center">
-		<a href="/" class="btn btn-lg btn-primary">Voltar!</a>
+		<div align="center">
+			<a href="/" class="btn btn-primary">Voltar</a>
+		</div>
 	</div>
 
 	<script
