--- a/src/main/resources/templates/execute.html
+++ b/src/main/resources/templates/execute.html
@@ -11,6 +11,9 @@
 			<h1>TASIMA <small>Metódos Ágeis - Deploy</small></h1>
 		</div>
 		<div align="center">
+		
+			<span th:text="${message}"></span>
+			
 			<a href="/" class="btn btn-primary">Voltar</a>
 		</div>
 	</div>
