--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 			<div align="center" class="form-group">
 				<h3>Validador de RG</h3>
 				<form class="form-inline" action="#" th:action="@{/execute}" method="post" placeholder="Digite um rg">
-				    <input class="form-control" type="text" id="RG" name="rg" />
+				    <input class="form-control" type="text" id="rg" name="rg" />
 				    <input type="submit" id="valide" name="valide" value="Validar!" class="btn btn-default"/>
 				</form>
 			</div>
