--- a/src/main/resources/templates/execute.html
+++ b/src/main/resources/templates/execute.html
@@ -12,7 +12,8 @@
 		</div>
 		<div align="center">
 		
-			<span th:text="${message}"></span>
+			<span th:field="*{message}" ></span>
+
 			
 			<a href="/" class="btn btn-primary">Voltar</a>
 		</div>
