--- a/src/main/resources/templates/execute.html
+++ b/src/main/resources/templates/execute.html
@@ -12,8 +12,7 @@
 		</div>
 		<div align="center">
 		
-			<span th:field="*{message}" ></span>
-
+			<p th:text="${message}">...</p>
 			
 			<a href="/" class="btn btn-primary">Voltar</a>
 		</div>
