--- a/src/main/resources/templates/execute.html
+++ b/src/main/resources/templates/execute.html
@@ -12,7 +12,7 @@
 		</div>
 		<div align="center">
 		
-			<p th:text="${message}">...</p>
+			<p class="lead" th:text="${message}">...</p>
 			
 			<a href="/" class="btn btn-primary">Voltar</a>
 		</div>
